tests/error/pointer_unknown_arg.gw
#! [contains] unknown type
funptr void my_func(unknown_type type);
